# prompt-a-porter

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.claude/skills/bump/: SKILL.md
.claude/skills/verifica-release/: SKILL.md  verifica.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap.yml  cli-build.yml  client-build.yml  dep-canary.yml  macos-smoke.yml  mcp-server-build.yml  release.yml  security-audit.yml  server-build.yml  site-deploy.yml
.vetrina/: README.md  exclude.txt  secret-allowlist.txt
apps/cli/: .gitignore  go.mod  main.go  main_test.go
apps/client/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/client/src/: App.svelte  main.ts
apps/client/src-tauri/: Cargo.toml  nsis-hooks.nsh  rust-toolchain.toml  tauri.conf.json  tauri.windows.conf.json
apps/client/src-tauri/benches/: ricerca_ibrida.rs
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/examples/: genera_dataset.rs
apps/client/src-tauri/icons/: README.md  genera-icone.html  icon.icns
apps/client/src-tauri/migrations/: V001__schema_iniziale.sql  V002__versioning_completo.sql  V003__indici_audit.sql  V004__cartelle.sql  V005__embeddings.sql  V006__tag_embeddings.sql  V007__prompt_imports.sql  V008__prompt_goldens.sql  V009__prompt_run_observations.sql  V010__provider_config.sql  V011__prompt_varianti.sql  V012__prompt_fork.sql  V013__prompt_ratings.sql  V014__sort_order.sql  V015__segnaposti_globali.sql  V016__provider_config_gemini.sql
apps/client/src-tauri/src/: audit.rs  cartelle.rs  cestino.rs  debug_log.rs  editor.rs  embeddings.rs  embeddings_backfill.rs  embeddings_store.rs  errore.rs  fork.rs  import_export.rs  lib.rs  libreria.rs  linting.rs  main.rs  migrazione.rs  preferenze.rs  pricing.rs  prompt.rs  prompt_componibili.rs  provider_ai.rs  rating.rs  regression.rs  ricerca_ibrida.rs  ritocco.rs  segnaposti_globali.rs  similarity.rs  statistiche.rs  sync.rs  tags_suggest.rs  util_random.rs  varianti.rs  vault.rs  versioning.rs
apps/client/src-tauri/src/ritocco/guide/: anthropic.md  generico.md  google.md  openai.md
apps/mcp-server/: package.json  tsconfig.json  vitest.config.ts
apps/mcp-server/src/: index.ts
apps/server/: .dockerignore  Dockerfile  go.mod  go.sum
apps/server/internal/: integration_test.go
apps/server/migrations/: 001_schema_iniziale.sql
apps/site/: .npmrc  package.json
apps/site/.vitepress/: config.ts
design_handoff/: 02 Libreria.html  03 Editor Prompt.html  05 Impostazioni.html  06 Onboarding.html  index.html  tokens.css  tokens.json
docs/: README.md  api-server.md  architettura.md  cli-reference.md  deploy-produzione.md  index.md  prompt-ricostruzione.md  quality-gate-fase-2.md  roadmap-rinvii.md  schema-dati.md  setup-repo-github.md  setup-sviluppo.md  todo-fase-1.md  todo-fase-2  todo-fase-2.md  todo-fase-3.md  todo-fase-4.md  todo-fase-5.md
docs/architettura/: README.md  api-server.md  design-system.md  overview.md  schema-dati.md
docs/architettura/decisioni/: README.md  authenticode-signing.md  embedding-model.md  onnx-bundle.md  sqlite-vec-sqlcipher.md
docs/architettura/design-handoff/: 01 Command Palette.html  04 Renderer.html  07 Auth.html  08 Tray.html  2026-05-08-redesign-brief.md  Design System.html  README.md  app.css
docs/architettura/redesign/: README.md  decisioni-designer.md
docs/contribuire/: README.md  ci-workflows.md  release-signing-workflow.md  setup-repo-github.md  setup-sviluppo.md  setup-tauri-updater-keys.md  stile-docs-utente.md
docs/demo/: README.md  demo-vault.json
docs/operativo/: README.md  bench-ricerca-ibrida.md  coverage.md  deploy-produzione.md  firma-macos.md  migrazione-repo-pubblico.md  release-signing-macos.md
docs/roadmap/: README.md  SAL_2026_05_17.MD  cestino-e-cancellazione-import.md  fase-1-mvp.md  fase-2-foundations.md  fase-3-intelligence.md  fase-4-workflow.md  fase-5-enterprise.md  guida-interattiva.md  intervista.md  lessons-learned-fase-1.md  linter-personalizzabile.md  menu-contestuale.md  ordito-sync-log.md  prompts-as-code.md  quality-gate-fase-2.md  redesign-v08.md  release-plan.md  retrospettiva-collaborazione-1.0.md  rinvii.md  ritocco.md  stagioni-e-nomi-rilascio.md  v1.0-personale.md  v2.0-enterprise.md  vault-a-cartella.md
docs/roadmap/icons/: README.md  icon-concepts.html  icon-set.html
docs/roadmap/ordito/: blueprint-F1.md  blueprint-F2.md  blueprint-F3.md  blueprint-F4.md
docs/roadmap/redesign-v08/: blueprint-F0.md  blueprint-F1.md  blueprint-F10.md  blueprint-F11.md  blueprint-F2.md  blueprint-F3.md  blueprint-F4.md  blueprint-F5.md  blueprint-F6.md  blueprint-F7.md  blueprint-F8.md  blueprint-F9.md  blueprint-backend-v014.md
docs/roadmap/website/: analytics-matomo.md  contenuti.md  istruzioni-sviluppo-landing.md  tech-stack.md
docs/spike/: embedding-model.md  onnx-bundle.md  sqlite-vec-sqlcipher.md
docs/test/: README.md  test-cases.md
docs/utente/: README.md  auto-update.md  cartelle.md  cli-ricette.md  cli.md  fork-prompt.md  formato-export-json.md  getting-started.md  glossario-sintassi.md  linting-regole.md  markdown-import-export.md  mcp.md  prompt-componibili.md  rating-prompt.md  regression-testing.md  ricerca-semantica.md  scorciatoie-tastiera.md  troubleshooting.md  varianti-prompt.md
docs/utente/casi-uso/: README.md  brainstorm-idee.md  code-review.md  commit-message.md  email-professionale.md  riscrittura-tono.md  summarize-articolo.md  traduzione-tecnica.md
scripts/: publish-vetrina.sh  setup-ubuntu.sh  setup-windows.ps1  sign-release.ps1  test-publish-vetrina-gate.sh
spikes/: README.md
spikes/embedding-models/: dataset.mjs  index.mjs  package.json
spikes/onnx-bundle/: .gitignore  Cargo.toml
spikes/onnx-bundle/src/: baseline.rs
spikes/sqlite-vec/: Cargo.toml
spikes/sqlite-vec/src/: main.rs
(+241 files in other folders)
