[package]
name = "pap"
version = "0.1.0"
description = "Prompt a Porter — Libreria locale per prompt AI"
authors = ["Roberto Marchioro"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
rand = "0.8"
# ONNX Runtime per embeddings locali (Fase 3 Step 1).
# Configurazione: default-features=false + load-dynamic (carica libonnxruntime
# da disco a runtime, lazy) + api-23 (evita VitisAI introdotto in ORT 1.24,
# vedi ADR architettura/decisioni/onnx-bundle.md). ndarray richiesto per
# costruire i tensor di input. download-binaries / tokenizer / HTTP client
# verranno aggiunti nelle PR successive di Step 1 (download modello + compute).
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-23", "ndarray"] }
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
