[package]
name = "pap"
version = "0.1.0"
description = "Prompt a Porter — Libreria locale per prompt AI"
authors = ["Roberto Marchioro"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
rand = "0.8"
# ONNX Runtime per embeddings locali (Fase 3 Step 1).
# Configurazione: default-features=false + load-dynamic (carica libonnxruntime
# da disco a runtime, lazy) + api-23 (evita VitisAI introdotto in ORT 1.24,
# vedi ADR architettura/decisioni/onnx-bundle.md). ndarray richiesto per
# costruire i tensor di input. tokenizer verrà aggiunto nella PR 3/3
# di Step 1 (compute reale).
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-23", "ndarray"] }
ndarray = "0.16"
# HTTP client per scaricare il modello ONNX da HuggingFace al primo uso.
# Feature tls-rustls (no openssl, build più portabile in CI).
ureq = { version = "2.10", default-features = false, features = ["tls"] }
# Tokenizer compatibile con tokenizer.json di HuggingFace per pre-processare
# il testo prima dell'inference ort. default-features=false evita onig
# (richiede C compiler) e progressbar (TTY).
tokenizers = { version = "0.20", default-features = false }
# Estrazione archivi onnxruntime release: tar.gz su Linux/macOS, zip su Windows.
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
