[package]
name = "pap"
version = "0.8.29"
description = "Prompt a Porter — Libreria locale per prompt AI"
authors = ["Roberto Marchioro"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
# Issue #144: previene seconda istanza dell'app su Win/macOS/Linux.
# Senza questo plugin, lanciare l'eseguibile portable due volte crea
# due processi → due icone in traybar. Il callback emette focus alla
# prima istanza già attiva.
tauri-plugin-single-instance = "2"
# v0.8.7 Sezione Sviluppo → Debug log: plugin ufficiale Tauri per logging
# con file rotation, JS bridge (console.* → file), target multipli.
# Bridge bidirezionale frontend/backend, log levels filtrabili.
# Inizializzato in lib.rs::run() con LogDir + Stdout (dev) targets.
tauri-plugin-log = "2"
# v1.0 M1.4 — Tauri Updater: check + download + install di nuove release
# verificando la firma Ed25519 di `latest.json`. Endpoint configurato in
# tauri.conf.json punta agli asset GitHub Releases. Vedi
# docs/architettura/decisioni/authenticode-signing.md §"Tauri Updater
# key pair" per la procedura di generazione chiavi.
tauri-plugin-updater = "2"
# Avvio automatico al login del SO (Win registry Run per-utente, macOS
# LaunchAgent, Linux .desktop). Registrato con arg `--minimized` così
# l'avvio al boot parte ridotto nel tray. Toggle in Impostazioni → Sistema,
# escluso in versione portable (path exe non stabile). Vedi lib.rs::run().
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
# sqlite-vec: estensione vector store per SQLite (vec0 virtual table).
# Compatibilità con SQLCipher verificata nello Spike 1 (vedi
# `docs/architettura/decisioni/sqlite-vec-sqlcipher.md`): registrata come
# auto-extension statica via sqlite3_auto_extension prima di Connection::open.
sqlite-vec = "0.1"
argon2 = "0.5"
rand = "0.10"
# Regex per modulo linting (Fase 3 Step 5): rilevamento segnaposti
# malformati, PII (email, CC, API key), n-gram repetition.
regex = "1"
# ONNX Runtime per embeddings locali (Fase 3 Step 1).
# Configurazione: default-features=false + load-dynamic (carica libonnxruntime
# da disco a runtime, lazy) + api-23 (evita VitisAI introdotto in ORT 1.24,
# vedi ADR architettura/decisioni/onnx-bundle.md). ndarray richiesto per
# costruire i tensor di input. tokenizer verrà aggiunto nella PR 3/3
# di Step 1 (compute reale).
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-23", "ndarray"] }
ndarray = "0.17"
# HTTP client per scaricare il modello ONNX da HuggingFace al primo uso.
# Feature tls-rustls (no openssl, build più portabile in CI).
ureq = { version = "2.10", default-features = false, features = ["tls"] }
# Tokenizer compatibile con tokenizer.json di HuggingFace per pre-processare
# il testo prima dell'inference ort. default-features=false evita onig
# (richiede C compiler), progressbar (TTY) e esaxx_fast. fancy-regex come
# regex backend pure-Rust è obbligatorio (alternativa a onig).
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
# Estrazione archivi onnxruntime release: tar.gz su Linux/macOS, zip su Windows.
flate2 = "1.0"
tar = "0.4"
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
# Benchmark harness per quality gate Step 10 (P95 ricerca ibrida < 100ms su
# 10k prompt). Standard de-facto Rust per micro-benchmarks su stabile.
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "ricerca_ibrida"
harness = false

[[example]]
name = "genera_dataset"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
